--- a/contact.html
+++ b/contact.html
@@ -45,12 +45,12 @@
     <!-- Details -->
     <div class="card">
       <h3>Get in Touch</h3>
-      <p><strong>Phone:</strong> +91 XXXXXXXXXX</p>
-      <p><strong>Email:</strong> hello@chillthrive.com</p>
-      <p><strong>Address:</strong> Surat, Gujarat, India</p>
+      <p><strong>Phone:</strong> +91 9227025160</p>
+      <p><strong>Email:</strong> thrivechill@gmail.com</p>
+      <p><strong>Address:</strong> Mota Varachha, Surat, Gujarat, India</p>
 
       <p>
-        Reach out for bookings, queries, or collaborations.
+        Reach out for bookings, queries or collaborations.
         Our team will respond promptly.
       </p>
     </div>
@@ -61,7 +61,7 @@
 
       <form>
         <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
+        <input type="tel" placeholder="Your Phone Number" required>
         <textarea placeholder="Your Message" rows="5"></textarea>
         <button type="submit" class="btn">Send Message</button>
       </form>
@@ -76,7 +76,7 @@
   <h2 class="section-title">Find Us</h2>
 
   <iframe 
-    src="https://www.google.com/maps?q=Surat,Gujarat&output=embed"
+    src="https://www.google.com/maps?q=21.1702,72.8311&output=embed"
     width="100%"
     height="300"
     style="border:0; border-radius:16px;"
@@ -93,4 +93,5 @@
 
 </body>
 </html>
+
 
