--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
+      <li><a href="booking.html">Booking</a></li>
       <li><a href="awareness.html">Awareness</a></li>
       <li><a href="founder.html">Founder</a></li>
       <li><a href="gallery.html">Gallery</a></li>
@@ -36,7 +37,7 @@
     <p>Rejuvenate your body. Reset your mind.</p>
     <div class="hero-buttons">
       <a href="services.html" class="btn">Explore Services</a>
-      <a href="contact.html" class="btn-outline">Book a Session</a>
+      <a href="booking.html" class="btn-outline">Book a Session</a>
     </div>
   </div>
 </section>
@@ -133,5 +134,6 @@
 
 </body>
 </html>
+
 
 
