--- a/services.html
+++ b/services.html
@@ -21,6 +21,7 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
+      <li><a href="booking.html">Booking</a></li>
       <li><a href="awareness.html">Awareness</a></li>
       <li><a href="founder.html">Founder</a></li>
       <li><a href="gallery.html">Gallery</a></li>
@@ -57,7 +58,7 @@
     <p><strong>Duration:</strong> 30 / 60 minutes</p>
     <p><strong>Price:</strong> ₹XXX</p>
 
-    <a href="contact.html" class="btn">Book Now</a>
+    <a href="booking.html" class="btn">Book Now</a>
   </div>
 
   <br>
@@ -79,7 +80,7 @@
     <p><strong>Duration:</strong> 30 minutes</p>
     <p><strong>Price:</strong> ₹XXX</p>
 
-    <a href="contact.html" class="btn">Book Now</a>
+    <a href="booking.html" class="btn">Book Now</a>
   </div>
 
   <br>
@@ -101,7 +102,7 @@
     <p><strong>Duration:</strong> 20–30 minutes</p>
     <p><strong>Price:</strong> ₹XXX</p>
 
-    <a href="contact.html" class="btn">Book Now</a>
+    <a href="booking.html" class="btn">Book Now</a>
   </div>
 
 </section>
@@ -117,7 +118,7 @@
         <p>Balanced recovery using cold and heat therapy.</p>
         <p><strong>Time:</strong> 60 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="contact.html" class="btn">Book Now</a>
+        <a href="booking.html" class="btn">Book Now</a>
       </div>
 
       <div class="card">
@@ -125,7 +126,7 @@
         <p>Contrast therapy for enhanced circulation.</p>
         <p><strong>Time:</strong> 60 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="contact.html" class="btn">Book Now</a>
+        <a href="booking.html" class="btn">Book Now</a>
       </div>
 
       <div class="card">
@@ -133,7 +134,7 @@
         <p>Ice bath + steam + jacuzzi experience.</p>
         <p><strong>Time:</strong> 90 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="contact.html" class="btn">Book Now</a>
+        <a href="booking.html" class="btn">Book Now</a>
       </div>
     </div>
   </div>
@@ -148,4 +149,5 @@
 
 </body>
 </html>
+
 
