--- a/awareness.html
+++ b/awareness.html
@@ -21,6 +21,7 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
+      <li><a href="booking.html">Booking</a></li>
       <li><a href="awareness.html">Awareness</a></li>
       <li><a href="founder.html">Founder</a></li>
       <li><a href="gallery.html">Gallery</a></li>
@@ -107,4 +108,5 @@
 
 </body>
 </html>
+
 
