--- a/booking.html
+++ b/booking.html
@@ -18,6 +18,10 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="booking.html">Booking</a></li>
+      <li><a href="awareness.html">Awareness</a></li>
+      <li><a href="founder.html">Founder</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
@@ -42,6 +46,7 @@
         <option>Jacuzzi Therapy</option>
         <option>Steam Bath</option>
         <option>Ice + Steam Combo</option>
+        <option>Ice + Jacuzzi Combo</option>
         <option>Full Recovery Combo</option>
       </select>
 
@@ -53,10 +58,10 @@
       <label>Time Slot</label>
       <select id="time" required>
         <option value="">Select Time</option>
-        <option>07:00 – 08:00</option>
-        <option>08:00 – 09:00</option>
-        <option>18:00 – 19:00</option>
-        <option>19:00 – 20:00</option>
+        <option>07:00 – 10:00</option>
+        <option>10:00 – 13:00</option>
+        <option>15:00 – 18:00</option>
+        <option>18:00 – 21:00</option>
       </select>
 
       <!-- User Details -->
