--- a/booking.html
+++ b/booking.html
@@ -93,7 +93,7 @@
 <!-- Firebase + JS -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="js/booking.js"></script>
+<script src="./booking.js"></script>
 
 </body>
 </html>
