--- a/founder.html
+++ b/founder.html
@@ -92,7 +92,12 @@
   </div>
 </footer>
 
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<script src="./firebase.js"></script>
+
 </body>
 </html>
+
 
 
