--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
     <p><strong>Duration:</strong> 30 / 60 minutes</p>
     <p><strong>Price:</strong> ₹XXX</p>
 
-    <a href="booking.html" class="btn">Book Now</a>
+    <a href="booking.html?service=Ice Bath Therapy" class="btn">Book Now</a>
   </div>
 
   <br>
@@ -80,7 +80,7 @@
     <p><strong>Duration:</strong> 30 minutes</p>
     <p><strong>Price:</strong> ₹XXX</p>
 
-    <a href="booking.html" class="btn">Book Now</a>
+    <a href="booking.html?service=Jacuzzi Therapy" class="btn">Book Now</a>
   </div>
 
   <br>
@@ -102,7 +102,7 @@
     <p><strong>Duration:</strong> 20–30 minutes</p>
     <p><strong>Price:</strong> ₹XXX</p>
 
-    <a href="booking.html" class="btn">Book Now</a>
+    <a href="booking.html?service=Steam Bath" class="btn">Book Now</a>
   </div>
 
 </section>
@@ -118,7 +118,7 @@
         <p>Balanced recovery using cold and heat therapy.</p>
         <p><strong>Time:</strong> 60 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="booking.html" class="btn">Book Now</a>
+        <a href="booking.html?service=Ice + Steam Combo" class="btn">Book Now</a>
       </div>
 
       <div class="card">
@@ -126,7 +126,7 @@
         <p>Contrast therapy for enhanced circulation.</p>
         <p><strong>Time:</strong> 60 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="booking.html" class="btn">Book Now</a>
+        <a href="booking.html?service=Ice + Jacuzzi Combo" class="btn">Book Now</a>
       </div>
 
       <div class="card">
@@ -134,7 +134,7 @@
         <p>Ice bath + steam + jacuzzi experience.</p>
         <p><strong>Time:</strong> 90 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="booking.html" class="btn">Book Now</a>
+        <a href="booking.html?service=Full Recovery Combo" class="btn">Book Now</a>
       </div>
     </div>
   </div>
@@ -153,6 +153,7 @@
 
 </body>
 </html>
+
 
 
 
