--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="./firebase.js"></script>
+<script src="./app.js"></script>
 
 <script>
 document.getElementById("contactForm").addEventListener("submit", function(e){
@@ -114,6 +114,7 @@ document.getElementById("contactForm").addEventListener("submit", function(e){
 
 </body>
 </html>
+
 
 
 
