--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@
         <p>Balanced recovery using cold and heat therapy.</p>
         <p><strong>Time:</strong> 60 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="booking.html?service=Ice 2B Steam Combo" class="btn">Book Now</a>
+        <a href="booking.html?service=Ice %2B Steam Combo" class="btn">Book Now</a>
       </div>
 
       <div class="card">
@@ -126,7 +126,7 @@
         <p>Contrast therapy for enhanced circulation.</p>
         <p><strong>Time:</strong> 60 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="booking.html?service=Ice 2B Jacuzzi Combo" class="btn">Book Now</a>
+        <a href="booking.html?service=Ice %2B Jacuzzi Combo" class="btn">Book Now</a>
       </div>
 
       <div class="card">
@@ -153,6 +153,7 @@
 
 </body>
 </html>
+
 
 
 
