--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <section class="cta">
   <div class="container">
     <h2>Start Your Recovery Journey Today</h2>
-    <a href="contact.html" class="btn">Book Now</a>
+    <a href="booking.html" class="btn">Book Now</a>
   </div>
 </section>
 
@@ -138,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
