--- a/booking.html
+++ b/booking.html
@@ -66,13 +66,13 @@
 
       <!-- User Details -->
       <label>Name</label>
-      <input type="text" id="name" required>
+      <input type="text" id="name" placeholder="Your Name" required>
 
       <label>Phone</label>
-      <input type="tel" id="phone" required>
+      <input type="tel" id="phone" placeholder="Your Phone Number" required>
 
       <label>Email</label>
-      <input type="email" id="email" required>
+      <input type="email" id="email" placeholder="Your Email" required>
 
       <!-- Payment -->
       <p><strong>Payment:</strong> Cash at Venue / QR on arrival</p>
