--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,9 @@
       <h3>Send a Message</h3>
 
       <form id="contactForm">
-        <input type="text" placeholder="Your Name" required>
-        <input type="tel" placeholder="Your Phone Number" required>
-        <textarea placeholder="Your Message" rows="5"></textarea>
+        <input type="text" id="contact-name" placeholder="Your Name" required>
+        <input type="tel" id="contact-phone" placeholder="Your Phone Number" required>
+        <textarea id="contact-msg" placeholder="Your Message" rows="5"></textarea>
         <button type="submit" class="btn">Send Message</button>
       </form>
     </div>
@@ -98,3 +98,4 @@
 
 </body>
 </html>
+
