--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 <section class="container section">
   <h2 class="section-title">What Our Clients Say</h2>
 
+  <a href="testimonials.html" class="btn">View All Testimonials</a>
+
   <div class="services">
     <div class="card">
       <p>“The ice bath sessions completely changed my recovery routine.”</p>
@@ -138,6 +140,7 @@
 
 </body>
 </html>
+
 
 
 
