--- a/founder.html
+++ b/founder.html
@@ -24,6 +24,7 @@
       <li><a href="booking.html">Booking</a></li>
       <li><a href="awareness.html">Awareness</a></li>
       <li><a href="founder.html">Founder</a></li>
+      <li><a href="testimonials.html">Testimonials</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -98,6 +99,7 @@
 
 </body>
 </html>
+
 
 
 
