--- a/testimonials.html
+++ b/testimonials.html
@@ -16,7 +16,13 @@
     <h2 class="logo">Chill Thrive</h2>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="booking.html">Booking</a></li>
+      <li><a href="awareness.html">Awareness</a></li>
+      <li><a href="founder.html">Founder</a></li>
       <li><a href="testimonials.html">Testimonials</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
