--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- ================= HERO ================= -->
 <section class="hero">
   <div class="container hero-content">
-    <h1>Where Recovery Meets Resilience</h1>
+    <h1>Welcome to Chill Thrive - Where Recovery Meets Resilience</h1>
     <p>Rejuvenate your body. Reset your mind.</p>
     <div class="hero-buttons">
       <a href="services.html" class="btn">Explore Services</a>
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
