--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <h1>Welcome to Chill Thrive - Where Recovery Meets Resilience.</h1>
     <p>Rejuvenate your body. Reset your mind.</p>
     <div class="hero-buttons">
-      <a href="services.html" class="btn">Explore Services</a>
-      <a href="booking.html" class="btn-outline">Book a Session</a>
+      <a href="booking.html" class="btn">Book a Session</a>
+      <a href="services.html" class="btn-outline">Explore Services</a>
     </div>
   </div>
 </section>
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
