--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
   <h2 class="section-title">Our Therapies</h2>
 
   <div class="services">
-    <div class="card">
-      <h3>Ice Bath Therapy</h3>
-      <p>Cold immersion to reduce inflammation and boost recovery.</p>
-    </div>
+    <a href="services.html#ice-bath" class="card">
+  <h3>Ice Bath Therapy</h3>
+  <p>Cold immersion to reduce inflammation and boost recovery.</p>
+</a>
 
-    <div class="card">
-      <h3>Jacuzzi Therapy</h3>
-      <p>Warm hydrotherapy for deep muscle relaxation.</p>
-    </div>
+<a href="services.html#jacuzzi" class="card">
+  <h3>Jacuzzi Therapy</h3>
+  <p>Warm hydrotherapy for deep muscle relaxation.</p>
+</a>
 
-    <div class="card">
-      <h3>Steam Bath</h3>
-      <p>Detoxifying heat therapy for skin and respiratory health.</p>
-    </div>
+<a href="services.html#steam" class="card">
+  <h3>Steam Bath</h3>
+  <p>Detoxifying heat therapy for skin and respiratory health.</p>
+</a>
 
-    <div class="card">
-      <h3>Combo Therapy</h3>
-      <p>Best-value recovery packages combining heat and cold.</p>
-    </div>
+<a href="services.html#combo" class="card">
+  <h3>Combo Therapy</h3>
+  <p>Best-value recovery packages combining heat and cold.</p>
+</a>
   </div>
 </section>
 
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
