--- a/services.html
+++ b/services.html
@@ -43,8 +43,8 @@
 <section class="container section">
 
   <!-- Ice Bath -->
-  <div class="card">
-    <h3>Ice Bath Therapy</h3>
+  <div class="card" id="ice-bath">
+  <h3>Ice Bath Therapy</h3>
     <p>
       Cold immersion therapy designed to reduce inflammation, accelerate
       muscle recovery, and improve mental resilience.
@@ -65,8 +65,8 @@
   <br>
 
   <!-- Jacuzzi -->
-  <div class="card">
-    <h3>Jacuzzi Therapy</h3>
+  <div class="card" id="jacuzzi">
+  <h3>Jacuzzi Therapy</h3>
     <p>
       Warm hydrotherapy that relaxes muscles, improves blood flow,
       and calms the nervous system.
@@ -87,8 +87,8 @@
   <br>
 
   <!-- Steam Bath -->
-  <div class="card">
-    <h3>Steam Bath</h3>
+  <div class="card" id="steam">
+  <h3>Steam Bath</h3>
     <p>
       Detoxifying heat therapy that improves respiratory health,
       skin rejuvenation, and mental relaxation.
@@ -110,7 +110,7 @@
 
 <!-- ================= COMBO PACKAGES ================= -->
 <section class="why">
-  <div class="container">
+  <div class="container" id="combo">
     <h2 class="section-title">Combo Packages</h2>
 
     <div class="services">
@@ -154,6 +154,7 @@
 
 </body>
 </html>
+
 
 
 
