--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         <p>Sessions guided by wellness experts.</p>
       </div>
       <div>
-        <h4>Premium Hygiene</h4>
+        <h4>Hygienic & Premium Setup</h4>
         <p>Sanitized, safe, and high-quality facilities.</p>
       </div>
       <div>
-        <h4>Community Wellness</h4>
+        <h4>Community-Driven Wellness</h4>
         <p>Building resilience together.</p>
       </div>
     </div>
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
