--- a/index.html
+++ b/index.html
@@ -100,23 +100,33 @@
 <section class="container section">
   <h2 class="section-title">What Our Clients Say</h2>
 
-  <a href="testimonials.html" class="btn">View All Testimonials</a>
-
+  <!-- Preview Grid -->
   <div class="services">
+
+    <!-- Video Testimonial Preview -->
+    <a href="testimonials.html" class="card video-card">
+      <img src="https://img.youtube.com/vi/VIDEO_ID/hqdefault.jpg" alt="Video testimonial">
+      <div class="play-btn">▶</div>
+      <strong>Watch Client Experience</strong>
+    </a>
+
+    <!-- Text Testimonial -->
     <div class="card">
       <p>“The ice bath sessions completely changed my recovery routine.”</p>
       <strong>— Athlete</strong>
     </div>
 
+    <!-- Text Testimonial -->
     <div class="card">
       <p>“Calming environment and professional guidance.”</p>
       <strong>— Wellness Enthusiast</strong>
     </div>
 
-    <div class="card">
-      <p>“Perfect balance of science and relaxation.”</p>
-      <strong>— Fitness Coach</strong>
-    </div>
+  </div>
+
+  <!-- Link to Full Page -->
+  <div style="text-align:center; margin-top:2rem;">
+    <a href="testimonials.html" class="btn">View All Testimonials</a>
   </div>
 </section>
 
@@ -141,6 +151,7 @@
 
 </body>
 </html>
+
 
 
 
