--- a/index.html
+++ b/index.html
@@ -100,31 +100,29 @@
 <section class="container section">
   <h2 class="section-title">What Our Clients Say</h2>
 
-  <!-- Preview Grid -->
   <div class="services">
 
-    <!-- Video Testimonial Preview -->
-    <a href="testimonials.html" class="card video-card">
+    <!-- Video testimonial preview → Video section -->
+    <a href="testimonials.html#video-testimonials" class="card video-card">
       <img src="https://img.youtube.com/vi/VIDEO_ID/hqdefault.jpg" alt="Video testimonial">
       <div class="play-btn">▶</div>
       <strong>Watch Client Experience</strong>
     </a>
 
-    <!-- Text Testimonial -->
-    <div class="card">
+    <!-- Text testimonial → Text section -->
+    <a href="testimonials.html#text-testimonials" class="card">
       <p>“The ice bath sessions completely changed my recovery routine.”</p>
       <strong>— Athlete</strong>
-    </div>
+    </a>
 
-    <!-- Text Testimonial -->
-    <div class="card">
+    <!-- Text testimonial → Text section -->
+    <a href="testimonials.html#text-testimonials" class="card">
       <p>“Calming environment and professional guidance.”</p>
       <strong>— Wellness Enthusiast</strong>
-    </div>
+    </a>
 
   </div>
 
-  <!-- Link to Full Page -->
   <div style="text-align:center; margin-top:2rem;">
     <a href="testimonials.html" class="btn">View All Testimonials</a>
   </div>
@@ -151,17 +149,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
