--- a/testimonials.html
+++ b/testimonials.html
@@ -34,12 +34,12 @@
   </div>
 </section>
 
-<section class="container section">
+<section class="container section" id="text-testimonials">
   <h2 class="section-title">Text Testimonials</h2>
   <div id="textTestimonials" class="services"></div>
 </section>
 
-<section class="container section">
+<section class="container section" id="video-testimonials">
   <h2 class="section-title">Video Testimonials</h2>
   <div id="videoTestimonials" class="services"></div>
 </section>
@@ -56,3 +56,4 @@
 
 </body>
 </html>
+
