--- a/services.html
+++ b/services.html
@@ -46,14 +46,14 @@
   <div class="card" id="ice-bath">
   <h3>Ice Bath Therapy</h3>
     <p>
-      Cold immersion therapy designed to reduce inflammation, accelerate
-      muscle recovery, and improve mental resilience.
+      Cold immersion therapy designed to reduce inflammation, improve circulation, and enhance mental toughness.
     </p>
 
     <ul>
-      <li>Reduces muscle soreness</li>
-      <li>Improves circulation</li>
-      <li>Enhances focus and stress regulation</li>
+      <li>Muscle recovery</li>
+      <li>Reduced soreness</li>
+      <li>Improved focus</li>
+      <li>Stress regulation</li>
     </ul>
 
     <p><strong>Duration:</strong> 30 / 60 minutes</p>
@@ -68,14 +68,13 @@
   <div class="card" id="jacuzzi">
   <h3>Jacuzzi Therapy</h3>
     <p>
-      Warm hydrotherapy that relaxes muscles, improves blood flow,
-      and calms the nervous system.
+      Warm hydrotherapy for muscle relaxation and nervous system calm.
     </p>
 
     <ul>
-      <li>Deep muscle relaxation</li>
+      <li>Muscle relaxation</li>
+      <li>Improved blood flow</li>
       <li>Stress relief</li>
-      <li>Improved circulation</li>
     </ul>
 
     <p><strong>Duration:</strong> 30 minutes</p>
@@ -90,14 +89,13 @@
   <div class="card" id="steam">
   <h3>Steam Bath</h3>
     <p>
-      Detoxifying heat therapy that improves respiratory health,
-      skin rejuvenation, and mental relaxation.
+      Detoxifying heat therapy for relaxation and respiratory health.
     </p>
 
     <ul>
-      <li>Detoxification</li>
+      <li>Detox</li>
       <li>Skin rejuvenation</li>
-      <li>Mental calmness</li>
+      <li>Mental relaxation</li>
     </ul>
 
     <p><strong>Duration:</strong> 20–30 minutes</p>
@@ -115,19 +113,19 @@
 
     <div class="services">
       <div class="card">
-        <h3>Ice + Steam</h3>
+        <h3>Ice Bath + Steam</h3>
         <p>Balanced recovery using cold and heat therapy.</p>
         <p><strong>Time:</strong> 60 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="booking.html?service=Ice %2B Steam Combo" class="btn">Book Now</a>
+        <a href="booking.html?service=Ice Bath %2B Steam" class="btn">Book Now</a>
       </div>
 
       <div class="card">
-        <h3>Ice + Jacuzzi</h3>
+        <h3>Ice Bath + Jacuzzi</h3>
         <p>Contrast therapy for enhanced circulation.</p>
         <p><strong>Time:</strong> 60 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="booking.html?service=Ice %2B Jacuzzi Combo" class="btn">Book Now</a>
+        <a href="booking.html?service=Ice Bath %2B Jacuzzi" class="btn">Book Now</a>
       </div>
 
       <div class="card">
@@ -135,7 +133,7 @@
         <p>Ice bath + steam + jacuzzi experience.</p>
         <p><strong>Time:</strong> 90 minutes</p>
         <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
-        <a href="booking.html?service=Full Recovery Combo" class="btn">Book Now</a>
+        <a href="booking.html?service=Full Recovery Combo (Ice %2B Steam %2B Jacuzzi)" class="btn">Book Now</a>
       </div>
     </div>
   </div>
@@ -154,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
