--- a/booking.html
+++ b/booking.html
@@ -46,9 +46,9 @@
         <option>Ice Bath Therapy</option>
         <option>Jacuzzi Therapy</option>
         <option>Steam Bath</option>
-        <option>Ice + Steam Combo</option>
-        <option>Ice + Jacuzzi Combo</option>
-        <option>Full Recovery Combo</option>
+        <option>Ice Bath + Steam</option>
+        <option>Ice Bath + Jacuzzi</option>
+        <option>Full Recovery Combo (Ice + Steam + Jacuzzi)</option>
       </select>
 
       <!-- Date -->
