--- a/services.html
+++ b/services.html
@@ -112,29 +112,54 @@
     <h2 class="section-title">Combo Packages</h2>
 
     <div class="services">
-      <div class="card">
+
+      <!-- Combo 1 -->
+      <div class="card combo-card">
+        <span class="badge">Popular</span>
         <h3>Ice Bath + Steam</h3>
         <p>Balanced recovery using cold and heat therapy.</p>
+
         <p><strong>Time:</strong> 60 minutes</p>
-        <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
+
+        <p class="price">
+          <del>₹2000</del>
+          <strong>₹1499</strong>
+        </p>
+
         <a href="booking.html?service=Ice Bath %2B Steam" class="btn">Book Now</a>
       </div>
 
-      <div class="card">
+      <!-- Combo 2 -->
+      <div class="card combo-card">
         <h3>Ice Bath + Jacuzzi</h3>
         <p>Contrast therapy for enhanced circulation.</p>
+
         <p><strong>Time:</strong> 60 minutes</p>
-        <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
+
+        <p class="price">
+          <del>₹2200</del>
+          <strong>₹1699</strong>
+        </p>
+
         <a href="booking.html?service=Ice Bath %2B Jacuzzi" class="btn">Book Now</a>
       </div>
 
-      <div class="card">
+      <!-- Combo 3 -->
+      <div class="card combo-card">
+        <span class="badge best">Best Value</span>
         <h3>Full Recovery Combo</h3>
         <p>Ice bath + steam + jacuzzi experience.</p>
+
         <p><strong>Time:</strong> 90 minutes</p>
-        <p><del>₹XXXX</del> <strong>₹XXX</strong></p>
+
+        <p class="price">
+          <del>₹3000</del>
+          <strong>₹2199</strong>
+        </p>
+
         <a href="booking.html?service=Full Recovery Combo (Ice %2B Steam %2B Jacuzzi)" class="btn">Book Now</a>
       </div>
+
     </div>
   </div>
 </section>
@@ -152,6 +177,7 @@
 
 </body>
 </html>
+
 
 
 
