--- a/services.html
+++ b/services.html
@@ -43,12 +43,18 @@
 <section class="container section">
 
   <!-- Ice Bath -->
-  <div class="card" id="ice-bath">
-  <h3>Ice Bath Therapy</h3>
+  <div class="card service-card" id="ice-bath">
+
+    <img src="images/ice-bath.jpg" alt="Ice Bath Therapy" class="service-media">
+
+    <h3>Ice Bath Therapy</h3>
+
     <p>
-      Cold immersion therapy designed to reduce inflammation, improve circulation, and enhance mental toughness.
+      Cold immersion therapy designed to reduce inflammation, improve circulation,
+      and enhance mental toughness.
     </p>
 
+    <h4>Benefits</h4>
     <ul>
       <li>Muscle recovery</li>
       <li>Reduced soreness</li>
@@ -56,8 +62,17 @@
       <li>Stress regulation</li>
     </ul>
 
-    <p><strong>Duration:</strong> 30 / 60 minutes</p>
-    <p><strong>Price:</strong> ₹XXX</p>
+    <h4>Duration & Pricing</h4>
+
+<div class="pricing-tier">
+  <span>30 Minutes</span>
+  <strong>₹XXX</strong>
+</div>
+
+<div class="pricing-tier">
+  <span>60 Minutes</span>
+  <strong>₹XXX</strong>
+</div>
 
     <a href="booking.html?service=Ice Bath Therapy" class="btn">Book Now</a>
   </div>
@@ -65,12 +80,17 @@
   <br>
 
   <!-- Jacuzzi -->
-  <div class="card" id="jacuzzi">
-  <h3>Jacuzzi Therapy</h3>
+  <div class="card service-card" id="jacuzzi">
+
+    <img src="images/jacuzzi.jpg" alt="Jacuzzi Therapy" class="service-media">
+
+    <h3>Jacuzzi Therapy</h3>
+
     <p>
       Warm hydrotherapy for muscle relaxation and nervous system calm.
     </p>
 
+    <h4>Benefits</h4>
     <ul>
       <li>Muscle relaxation</li>
       <li>Improved blood flow</li>
@@ -86,12 +106,17 @@
   <br>
 
   <!-- Steam Bath -->
-  <div class="card" id="steam">
-  <h3>Steam Bath</h3>
+  <div class="card service-card" id="steam">
+
+    <img src="images/steam.jpg" alt="Steam Bath" class="service-media">
+
+    <h3>Steam Bath</h3>
+
     <p>
       Detoxifying heat therapy for relaxation and respiratory health.
     </p>
 
+    <h4>Benefits</h4>
     <ul>
       <li>Detox</li>
       <li>Skin rejuvenation</li>
@@ -177,6 +202,7 @@
 
 </body>
 </html>
+
 
 
 
