--- a/services.html
+++ b/services.html
@@ -64,15 +64,15 @@
 
     <h4>Duration & Pricing</h4>
 
-<div class="pricing-tier">
+<a href="booking.html?service=Ice Bath Therapy&duration=30" class="pricing-tier link-tier">
   <span>30 Minutes</span>
   <strong>₹XXX</strong>
-</div>
+</a>
 
-<div class="pricing-tier">
+<a href="booking.html?service=Ice Bath Therapy&duration=60" class="pricing-tier link-tier">
   <span>60 Minutes</span>
   <strong>₹XXX</strong>
-</div>
+</a>
 
     <a href="booking.html?service=Ice Bath Therapy" class="btn">Book Now</a>
   </div>
@@ -202,6 +202,7 @@
 
 </body>
 </html>
+
 
 
 
