--- a/booking.html
+++ b/booking.html
@@ -51,6 +51,12 @@
         <option>Full Recovery Combo (Ice + Steam + Jacuzzi)</option>
       </select>
 
+      <select id="durationSelect">
+        <option value="">Select Duration</option>
+        <option value="30">30 Minutes</option>
+        <option value="60">60 Minutes</option>
+      </select>
+
       <!-- Date -->
       <label>Date</label>
       <input type="date" id="date" required>
