--- a/booking.html
+++ b/booking.html
@@ -51,11 +51,13 @@
         <option>Full Recovery Combo (Ice + Steam + Jacuzzi)</option>
       </select>
 
-      <select id="durationSelect">
+      <div id="duration-wrapper">
+      <select id="duration">
         <option value="">Select Duration</option>
         <option value="30">30 Minutes</option>
         <option value="60">60 Minutes</option>
       </select>
+      </div>
 
       <!-- Date -->
       <label>Date</label>
