--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <!-- ================= HERO ================= -->
 <section class="hero">
-  <div class="container hero-content">
+  <div class="container hero-bg">
     <h1>Welcome to Chill Thrive - Where Recovery Meets Resilience.</h1>
     <p>Rejuvenate your body. Reset your mind.</p>
     <div class="hero-buttons">
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
