--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 </header>
 
 <!-- ================= HERO ================= -->
-<section class="hero">
-  <div class="container hero-bg">
-    <h1>Welcome to Chill Thrive - Where Recovery Meets Resilience.</h1>
+<section class="hero hero-bg">
+  <div class="container hero-content">
+    <h1>Welcome to Chill Thrive – Where Recovery Meets Resilience.</h1>
     <p>Rejuvenate your body. Reset your mind.</p>
     <div class="hero-buttons">
       <a href="booking.html" class="btn">Book a Session</a>
@@ -149,4 +149,5 @@
 
 </body>
 </html>
+
 
