--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <!-- ================= NAVBAR ================= -->
 <header>
   <nav class="container nav">
-    <h2 class="logo">Chill Thrive</h2>
+    <h2 class="logo">
+  <img src="https://i.ibb.co/Tq71L2LH/chill-thrive.jpg" alt="Chill Thrive Logo" class="logo-img">
+  Chill Thrive
+</h2>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
@@ -149,5 +152,6 @@
 
 </body>
 </html>
+
 
 
