--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 <header>
   <nav class="container nav">
     <h2 class="logo">
-  <img src="https://i.ibb.co/Tq71L2LH/chill-thrive.jpg" alt="Chill Thrive Logo" class="logo-img">
-  Chill Thrive
+  <a href="index.html" class="logo-link">
+    <img src="https://i.ibb.co/gMFZYF97/chill-thrive-logo.jpg" alt="Chill Thrive Logo" class="logo-img">
+    Chill Thrive
+  </a>
 </h2>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
@@ -152,6 +154,7 @@
 
 </body>
 </html>
+
 
 
 
