--- a/services.html
+++ b/services.html
@@ -17,7 +17,12 @@
 <!-- ================= NAVBAR ================= -->
 <header>
   <nav class="container nav">
-    <h2 class="logo">Chill Thrive</h2>
+    <h2 class="logo">
+  <a href="index.html" class="logo-link">
+    <img src="https://i.ibb.co/gMFZYF97/chill-thrive-logo.jpg" alt="Chill Thrive Logo" class="logo-img">
+    Chill Thrive
+  </a>
+</h2>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
@@ -45,7 +50,7 @@
   <!-- Ice Bath -->
   <div class="card service-card" id="ice-bath">
 
-    <img src="images/ice-bath.jpg" alt="Ice Bath Therapy" class="service-media">
+    <img src="https://i.ibb.co/6J19nH52/icebath.jpg" alt="Ice Bath Therapy" class="service-media">
 
     <h3>Ice Bath Therapy</h3>
 
@@ -82,7 +87,7 @@
   <!-- Jacuzzi -->
   <div class="card service-card" id="jacuzzi">
 
-    <img src="images/jacuzzi.jpg" alt="Jacuzzi Therapy" class="service-media">
+    <img src="https://i.ibb.co/KzK7NVz3/jacuzzitherapy.jpg" alt="Jacuzzi Therapy" class="service-media">
 
     <h3>Jacuzzi Therapy</h3>
 
@@ -108,7 +113,7 @@
   <!-- Steam Bath -->
   <div class="card service-card" id="steam">
 
-    <img src="images/steam.jpg" alt="Steam Bath" class="service-media">
+    <img src="https://i.ibb.co/5ht7XRgG/steam-bath.png" alt="Steam Bath" class="service-media">
 
     <h3>Steam Bath</h3>
 
@@ -202,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
