--- a/testimonials.html
+++ b/testimonials.html
@@ -13,7 +13,12 @@
 
 <header>
   <nav class="container nav">
-    <h2 class="logo">Chill Thrive</h2>
+    <h2 class="logo">
+  <a href="index.html" class="logo-link">
+    <img src="https://i.ibb.co/gMFZYF97/chill-thrive-logo.jpg" alt="Chill Thrive Logo" class="logo-img">
+    Chill Thrive
+  </a>
+</h2>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
