--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,12 @@
 <!-- ================= NAVBAR ================= -->
 <header>
   <nav class="container nav">
-    <h2 class="logo">Chill Thrive</h2>
+    <h2 class="logo">
+  <a href="index.html" class="logo-link">
+    <img src="https://i.ibb.co/gMFZYF97/chill-thrive-logo.jpg" alt="Chill Thrive Logo" class="logo-img">
+    Chill Thrive
+  </a>
+</h2>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
@@ -100,6 +105,7 @@
 
 </body>
 </html>
+
 
 
 
