--- a/booking.html
+++ b/booking.html
@@ -77,6 +77,8 @@
 
       <label>Time Slot</label>
       <select id="time" required>
+  <option value="">Select Time</option>
+</select>
         <option value="">Select Time</option>
         <!-- Admin can enable/disable these via backend -->
         <option>07:00 – 10:00</option>
