--- a/booking.html
+++ b/booking.html
@@ -81,7 +81,7 @@
 </select>
 
       <p class="note">
-        * Time slots and dates can be managed by admin (capacity, availability).
+        * Availability depends on slot capacity.
       </p>
 
       <!-- STEP 3: USER DETAILS -->
