--- a/booking.html
+++ b/booking.html
@@ -73,7 +73,7 @@
       <h3>2. Select Date & Time Slot</h3>
 
       <label>Date</label>
-      <input type="date" id="date" required readonly>
+      <input type="date" id="date" required>
 
       <label>Time Slot</label>
       <select id="time" required>
